2001-05-19  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_SEARCH_LIBS): Unobfuscate.

2001-05-19  Akim Demaille  <akim@epita.fr>

	* autoconf.sh: s/undefined macro/possibly undefined macro/.

2001-05-19  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Particular Programs): Explain the
	`AC_PROG_LEX invoked multiple times' message.
	Reported by Rainer Orth as PR Autoconf/177.

2001-05-19  Akim Demaille  <akim@epita.fr>

	* autoheader.sh: Fix file names used in error messages.
	Reported by Rainer Orth as PR Autoconf/178.

2001-05-19  Akim Demaille  <akim@epita.fr>

	* tests/compile.at (AC_PROG_CPP via CC): Invoke AC_PROG_CC instead
	if using `cc'.

2001-05-19  Akim Demaille  <akim@epita.fr>

	* tests/compile.at (GNU Fortran 77): Don't AS_EXIT when using
	AT_CHECK_MACRO since it skips tests embedded in configure.ac.
	Remove files which might have been created when invoking the
	compiler.
	Reported by Nicolas Joly.

2001-05-14  Pavel Roskin  <proski@gnu.org>

	* doc/autoconf.texi (Shellology): Document a quirk in
	here-document handling on OpenBSD.

2001-05-11  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (_AC_PROG_PREPROC_WORKS_IFELSE): No longer use the
	`maybe' strategy: first try cpp's exit status, then its stderr.
	(AC_PROG_CPP, AC_PROG_CXXCPP): Adjust.
	* tests/compile.at (AC_PROG_CPP via CC): Simplify mycc.
	Remove unrelated code.

2001-05-10  Akim Demaille  <akim@epita.fr>

	* tests/compile.at (AC_PROG_CPP via CC): New.
	From Daniel Carroll.

2001-04-27  Akim Demaille  <akim@epita.fr>

	If AC_PROG_CC is invoked but not AC_PROG_CPP, then CPPFLAGS is not
	AC_SUBST'ed.
	Reported by Ralf Corsepius.

	* aclang.m4 (_AC_ARG_VAR_CPPFLAGS, _AC_ARG_VAR_LDFLAGS): New.
	(AC_PROG_CC, AC_PROG_CPP, AC_PROG_CXX, AC_PROG_CXXCPP)
	(AC_PROG_F77): Use them.

2001-04-27  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (_AC_PROG_PREPROC_WORKS): Rename and extend as...
	(_AC_PROG_PREPROC_WORKS_IFELSE): this.
	Adjust to admit
	(AC_PROG_CPP, AC_PROG_CXXCPP): Use it.