@@ -1,5 +1,9 @@
 2001-05-19  Akim Demaille  <akim@epita.fr>
 
+	* tests/tools.at: s/undefined macro/possibly undefined macro/.
+
+2001-05-19  Akim Demaille  <akim@epita.fr>
+
 	* acgeneral.m4 (AC_SEARCH_LIBS): Unobfuscate.
 
 2001-05-19  Akim Demaille  <akim@epita.fr>
